Layout bug

--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@
 
 section {
     width: 100%;
-    padding: 0 7%;
+    padding: 0;
     display: table;
     margin: 0;
     max-width: none;
